--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
   },
   "dependencies": {
     "@finsweet/ts-utils": "^0.38.0",
-    "chart.js": "^4.2.1"
+    "airtable": "^0.11.6",
+    "chart.js": "^4.2.1",
+    "echarts": "^5.4.2"
   }
 }
