--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "dependencies": {
     "@finsweet/ts-utils": "^0.38.0",
     "@splidejs/splide": "^4.1.4",
+    "@splidejs/splide-extension-auto-scroll": "^0.5.3",
     "airtable": "^0.11.6",
     "chart.js": "^4.2.1",
     "echarts": "^5.4.2"
