--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "name": "Finsweet",
     "url": "https://finsweet.com/"
   },
+  "platform": "node",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/finsweet/developer-starter.git"
@@ -40,6 +41,7 @@
     "@finsweet/eslint-config": "^2.0.2",
     "@finsweet/tsconfig": "^1.2.0",
     "@playwright/test": "^1.31.2",
+    "@types/node": "^20.2.5",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
     "cross-env": "^7.0.3",
@@ -57,6 +59,9 @@
     "@splidejs/splide-extension-auto-scroll": "^0.5.3",
     "airtable": "^0.11.6",
     "chart.js": "^4.2.1",
-    "echarts": "^5.4.2"
+    "dotenv": "^16.1.3",
+    "echarts": "^5.4.2",
+    "node-fetch": "2",
+    "webflow-api": "^1.2.2"
   }
 }
